# breakfast

./: .gitignore  .markdownlint.jsonc  .typos.toml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  Makefile  README.md  breakfast  breakfast.py  create_issues.sh  demo.tape  install.sh  mkver.conf  proposed-issues.md  pyproject.toml  requirements.txt  setup.py  test_breakfast.py
.agents/commands/: finish-issue.md  start-issue.md
.agents/skills/finish-issue/: SKILL.md
.agents/skills/monitor-pr/: SKILL.md
.agents/skills/raise-issue/: SKILL.md
.agents/skills/raise-pr/: SKILL.md
.agents/skills/start-issue/: SKILL.md
.antigravitycli/: cdf78009-abb6-4f5f-b958-26b2b56757d7.json
.claude/: settings.json
.claude/commands/: finish-issue.md  monitor-pr.md  raise-issue.md  raise-pr.md  start-issue.md
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: ci.yml
docs/: README.md
docs/design/: README.md  config-file.md  demo-generation.md  pluggable-calendars.md  pr-caching.md  tui.md
docs/manual/: README.md  installation.md  options.md  output-formats.md  troubleshooting.md  usage.md
src/breakfast/: api.py  cache.py  cli.py  config.py  logger.py  renderers.py  ui.py  updater.py  xdg.py
tests/: conftest.py  test_api.py  test_cache.py  test_cli.py  test_config.py  test_logger.py  test_renderers.py  test_ui.py  test_updater.py  test_xdg.py
tests/integration/: test_cli_integration.py
utils/: bench_render.py  bump_version_if_tag_exists.sh  check_binary_version.sh  create_release.sh  generate_man_page.py  install_git_mkver.sh  preamble.py  read_version.py
utils/vhs/: demo.tape
