[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "breakfast"
version = "0.2.0"
description = "A tool to help you start your day"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Steve Williams" }]
dependencies = [
  "click",
  "requests",
  "tabulate",
]

[project.scripts]
breakfast = "breakfast:breakfast"

[project.optional-dependencies]
test = [
  "pytest",
  "requests-mock",
]
build = [
  "shiv",
]
dev = [
  "pytest",
  "requests-mock",
  "shiv",
]

[tool.setuptools]
py-modules = ["breakfast"]
