[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "breakfast"
version = "0.3.0"
description = "A tool to help you start your day"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Steve Williams" }]
dependencies = [
  "click",
  "requests",
  "tabulate",
]

[project.scripts]
breakfast = "breakfast:breakfast"

[project.optional-dependencies]
test = [
  "pytest",
  "requests-mock",
]
lint = [
  "black",
  "ruff",
]
build = [
  "shiv",
]
dev = [
  "black",
  "pytest",
  "requests-mock",
  "ruff",
  "shiv",
]

[tool.setuptools]
py-modules = ["breakfast"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
