[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "breakfast"
dynamic = ["version"]
description = "A tool to help you start your day"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Steve Williams" }]
dependencies = [
  "click",
  "requests",
  "tabulate",
  "wcwidth",
]

[project.scripts]
breakfast = "breakfast.cli:breakfast"

[project.optional-dependencies]
test = [
  "pytest",
  "requests-mock",
]
lint = [
  "black",
  "ruff",
]
build = [
  "shiv",
  "click-man",
]
dev = [
  "black",
  "click-man",
  "pytest",
  "requests-mock",
  "ruff",
  "shiv",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
